5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1836_2603.log
== SUBMITION (2019-07-01 23:32:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input('')))

g=g

for i in range (4):
	g[:,j] = sorted(a[:,i], reverse= True)
print(g)
-- EXECUTION TIME:
1.06828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    g[:,j] = sorted(a[:,i], reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:34:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input('')))

g=g

for i in range (4):
	g[:,j] = sorted(a[:,i], reverse= True)
print(g)
-- EXECUTION TIME:
1.68968
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    g[:,j] = sorted(a[:,i], reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:34:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input('')))

g=g

for i in range (4):
	g[:,j] = sorted(a[:,i], reverse= True)
print(g)
-- EXECUTION TIME:
2.37563
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    g[:,j] = sorted(a[:,i], reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:34:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input('')))

g=g

for i in range (4):
	g[:,j] = sorted(a[:,i], reverse= True)
print(g)
-- EXECUTION TIME:
2.29346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    g[:,j] = sorted(a[:,i], reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:34:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input('')))

g=g

for i in range (4):
	g[:,j] = sorted(a[:,i], reverse= True)
print(g)
-- EXECUTION TIME:
3.7345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    g[:,j] = sorted(a[:,i], reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:34:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input('')))

g=g

for i in range (4):
	g[:,j] = sorted(a[:,i], reverse= True)
print(g)
-- EXECUTION TIME:
6.61849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    g[:,j] = sorted(a[:,i], reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:34:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input('')))

g=g

for i in range (4):
	g[:,j] = sorted(a[:,i], reverse= True)
print(g)
-- EXECUTION TIME:
8.92315
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    g[:,j] = sorted(a[:,i], reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:34:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input('')))

g=g

for i in range (4):
	g[:,j] = sorted(a[:,i], reverse= True)
print(g)
-- EXECUTION TIME:
2.47761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 9, in <module>
    g[:,j] = sorted(a[:,i], reverse= True)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:48:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

as = array(eval(input("")))
lg = zeros(shape(as[1],dtype=int))
for i in range(4):
	for j in range(4):
		lg[j]=as[j,i]
	lg = sorted(lg,reverse=True)
	for k in range(4):
		as[k,i]=lg[k]
print(as)
-- EXECUTION TIME:
0.694398
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 4
    as = array(eval(input("")))
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:48:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

ase = array(eval(input("")))
lg = zeros(shape(ase[1],dtype=int))
for i in range(4):
	for j in range(4):
		lg[j]=ase[j,i]
	lg = sorted(lg,reverse=True)
	for k in range(4):
		ase[k,i]=lg[k]
print(ase)
-- EXECUTION TIME:
1.20776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 5, in <module>
    lg = zeros(shape(ase[1],dtype=int))
TypeError: shape() got an unexpected keyword argument 'dtype'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:48:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

ase = array(eval(input("")))
lg = zeros(shape(ase[1],dtype=int))
for i in range(4):
	for j in range(4):
		lg[j]=ase[j,i]
	lg = sorted(lg,reverse=True)
	for k in range(4):
		ase[k,i]=lg[k]
print(ase)
-- EXECUTION TIME:
1.04089
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 5, in <module>
    lg = zeros(shape(ase[1],dtype=int))
TypeError: shape() got an unexpected keyword argument 'dtype'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:49:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

ase = array(eval(input("")))
lg = zeros(shape(ase[1],dtype=int))
for i in range(4):
	for j in range(4):
		lg[j]=ase[j,i]
	lg = sorted(lg,reverse=True)
	for k in range(4):
		ase[k,i]=lg[k]
print(ase)
-- EXECUTION TIME:
0.762048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 5, in <module>
    lg = zeros(shape(ase[1],dtype=int))
TypeError: shape() got an unexpected keyword argument 'dtype'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:59:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

ase = array(eval(input("")))
lg = zeros(shape(ase[1],dtype=int))
for i in range(4):
	for j in range(4):
		lg[j]=ase[j,i]
	lg = sorted(lg,reverse=True)
	for k in range(4):
		ase[k,i]=lg[k]
print(ase)
-- EXECUTION TIME:
1.19379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 5, in <module>
    lg = zeros(shape(ase[1],dtype=int))
TypeError: shape() got an unexpected keyword argument 'dtype'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
